--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,7 +1,6 @@
-
 {
   "projectName": "fidio",
-  "projectOwner": "Olúwáségun",
+  "projectOwner": "Adépòjù Olúwáségun",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
@@ -9,17 +8,6 @@
   ],
   "imageSize": 100,
   "commit": true,
-  "contributors": [
-    {
-      "login": "oluwasegun-aa",
-      "name": "Olúwáségun",
-      "avatar_url": "https://avatars0.githubusercontent.com/u/25525765?s=460&v=4",
-      "profile": "https://twitter.com/oluwasegun_aa",
-      "contributions": [
-        "code",
-        "doc",
-        "maintenance"
-      ]
-    }
+  "contributors": [],
   "contributorsPerLine": 7
 }
