--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "fidio",
+  "projectName": "Fidio",
   "projectOwner": "Adépòjù Olúwáségun",
   "repoType": "github",
   "repoHost": "https://github.com",
