--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "fluent-ffmpeg": "2.1.2"
   },
   "devDependencies": {
-    "webpack": "4.37.0",
-    "webpack-cli": "3.3.6",
     "@babel/cli": "7.4.4",
     "@babel/core": "7.4.5",
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
     "electron": "5.0.6",
-    "rimraf": "2.6.3"
+    "rimraf": "2.6.3",
+    "all-contributors-cli": "6.1.2"
   }
 }
