--- a/fidio/package.json
+++ b/fidio/package.json
@@ -5,8 +5,24 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --watchAll -u --coverage",
+    "test:pre-commit": "CI=true react-scripts test -u --coverage",
+    "eject": "react-scripts eject",
+    "lint:fix": "eslint src/**/*.js --fix",
+    "pretty": "./node_modules/.bin/prettier --single-quote --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "contributors:add": "npx all-contributors add",
+    "contributors:generate": "npx all-contributors generate"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn test:pre-commit"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +56,9 @@
     "@babel/preset-env": "7.4.5",
     "all-contributors-cli": "6.1.2",
     "electron": "5.0.6",
+    "husky": "3.0.4",
+    "lint-staged": "9.2.3",
+    "prettier": "1.18.2",
     "react-redux": "7.1.0",
     "rimraf": "2.6.3"
   }
