--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,4 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env", {
-        "targets": {
-          "node": "current"
-        }
-      }
-    ]
-  ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
