--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.9.0",
+    "react-dropzone": "11.0.1",
     "react-redux": "7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.1",
