implement file conversion, update readme and project dependencies

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "Fidio",
+  "projectName": "Github-gif-optimizer",
   "projectOwner": "Adépòjù Olúwáségun",
   "repoType": "github",
   "repoHost": "https://github.com",
