--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fidio",
+  "name": "Github-gif-optimizer",
   "version": "0.1.0",
   "private": true,
   "main": "dist/app/index.js",
@@ -9,7 +9,8 @@
     "build": "react-scripts build",
     "app": "electron .",
     "build:electron": "babel src/ -d dist --copy-files",
-    "electron:dev": "yarn clear && yarn build:electron && concurrently \" BROWSER=none yarn start\" \"wait-on http://localhost:3000 && yarn app\"",
+    "electron:dev": "yarn clear && yarn build:electron && concurrently \" BROWSER=none yarn start\" \"wait-on http://localhost:3000 && yarn app\" \"yarn file:server\"",
+    "file:server": "node dist/fileServer.js",
     "pretty": "./node_modules/.bin/prettier --single-quote --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint": "eslint src/**/*.js --fix",
     "test:ci": "CI=true react-scripts test --colors --coverage",
@@ -54,9 +55,12 @@
   "dependencies": {
     "@babel/preset-react": "7.0.0",
     "@babel/runtime": "7.4.5",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
     "electron": "6.0.4",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
+    "express": "4.17.1",
     "fluent-ffmpeg": "2.1.2",
     "lodash": "4.17.15",
     "node-sass": "4.12.0",
