--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Fidio",
-  "name": "Fidio Video manipulator",
+  "short_name": "Github-gif-optimizer",
+  "name": "Github-gif-optimizer Video manipulator",
   "icons": [
     {
       "src": "assets/logo.ico",
