--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -8,6 +8,18 @@
   ],
   "imageSize": 100,
   "commit": true,
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "Oluwasegun-AA",
+      "name": "Adépòjù Olúwáségun",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/25525765?v=4",
+      "profile": "https://github.com/Oluwasegun-AA",
+      "contributions": [
+        "bug",
+        "code",
+        "maintenance"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
